修复文件上传下载bug